# nano-ml

./: .gitignore  CMakeLists.txt  README.md
nanograddemo/: CMakeLists.txt
nanograddemo/src/: main.cpp
nanogradlib/: CMakeLists.txt
nanogradlib/include/: grad_value.h  nanograd.h  value.h
nanogradlib/src/: grad_value.cpp  value.cpp
nanonetdemo/: CMakeLists.txt
nanonetdemo/src/: main.cpp
nanonetlib/: CMakeLists.txt
nanonetlib/include/: layer.h  multi_layer_perceptron.h  nanonetlib.h  neural_module.h  neuron.h
nanonetlib/src/: layer.cpp  multi_layer_perceptron.cpp  neural_module.cpp  neuron.cpp
